--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <title>Memory Game</title>
 </head>
+
 <body>
-    
+    <h1>Clicks: <span class="playerCliscks"></span></h1>
+
+    <section></section>
     <script src="/app.js"></script>
 </body>
+
 </html>
