--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <!-- <h1>Clicks: <span class="playerCliscks"></span></h1> -->
+    <h1>Moves: <span class="playerCliscks"></span></h1>
 
     <section></section>
     <script src="/app.js"></script>
