--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <script src="/app.js" type="module"></script>
 
 <head>
     <meta charset="UTF-8">
@@ -13,7 +14,6 @@
     <h1>Moves: <span class="playerCliscks"></span></h1>
 
     <section></section>
-    <script src="/app.js"></script>
 </body>
 
 </html>
