--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Moves: <span class="playerCliscks"></span></h1>
+    <h1>Moves: <span class="playerMoves"></span></h1>
 
     <section></section>
 </body>
